Changed from wait/notify synchronization to Java 1.5 CountDownLatch